[tool.poetry]
name = "requests-iam-session"
version = "0.1.0"
description = ""
authors = ["Epsy Engineering <engineering@epsyhealth.com>"]
keywords = ["library"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25"
requests-toolbelt = "^0.9.1"
aws-requests-auth = "^0.4.3"
boto3 = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
